--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,9 @@ out/
 .env.development.local
 .env.test.local
 .env.production.local
+# macOS system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
